# velocitetxt

./: .gitignore  LICENSE  PKGBUILD  README.md  agent.md  index.html  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json  velocitext.desktop
src-tauri/src/: main.rs
src-tauri/src/commands/: indexer.rs  mod.rs  notes.rs  search.rs
src-tauri/src/models/: mod.rs  note.rs
src-tauri/src/services/: diagnostics.rs  indexer.rs  mod.rs  notes_fs.rs  search.rs  watcher.rs
