[package]
name = "velocitext"
version = "0.0.1"
description = "Velocitext desktop app"
authors = ["Velocitext"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
chrono = { version = "0.4", features = ["clock"] }
notify = "6.1"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[features]
custom-protocol = ["tauri/custom-protocol"]
